// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`removeDuplicateServices > should return an array of unique services filtered by lineId if the data source is bods 1`] = `
[
  {
    "dataSource": "bods",
    "destination": "Oldham circular",
    "endDate": "2023-08-10",
    "id": 4513,
    "lineId": "LineId1",
    "lineName": "149",
    "nocCode": "SCMN",
    "operatorShortName": "Stagecoach",
    "origin": "NMGH",
    "serviceCode": "NW_04_SCMN_149_1",
    "startDate": "2023-07-23",
  },
  {
    "dataSource": "bods",
    "destination": "Warrington",
    "endDate": "2023-09-23",
    "id": 4524,
    "lineId": "LineId2",
    "lineName": "100",
    "nocCode": "GONW",
    "operatorShortName": "Go North West",
    "origin": "Manchester",
    "serviceCode": "NW_04_GONW_100_1",
    "startDate": "2023-09-01",
  },
  {
    "dataSource": "bods",
    "destination": "Manchester",
    "endDate": null,
    "id": 4547,
    "lineId": "LineId3",
    "lineName": "253",
    "nocCode": "SCMN",
    "operatorShortName": "Stagecoach",
    "origin": "Partington",
    "serviceCode": "NW_04_SCMN_253_1",
    "startDate": "2023-08-15",
  },
]
`;

exports[`removeDuplicateServices > should return an array of unique services filtered by lineId if the data source is bods 2`] = `
[
  {
    "dataSource": "bods",
    "destination": "Oldham circular",
    "endDate": "2023-08-08",
    "id": 4513,
    "lineId": "LineId1",
    "lineName": "149",
    "nocCode": "SCMN",
    "operatorShortName": "Stagecoach",
    "origin": "NMGH",
    "serviceCode": "NW_04_SCMN_149_1",
    "startDate": "2023-07-23",
  },
  {
    "dataSource": "bods",
    "destination": "Warrington",
    "endDate": "2023-08-10",
    "id": 4524,
    "lineId": "LineId2",
    "lineName": "100",
    "nocCode": "GONW",
    "operatorShortName": "Go North West",
    "origin": "Manchester",
    "serviceCode": "NW_04_GONW_100_1",
    "startDate": "2023-07-23",
  },
  {
    "dataSource": "bods",
    "destination": "Manchester",
    "endDate": null,
    "id": 4547,
    "lineId": "LineId3",
    "lineName": "253",
    "nocCode": "SCMN",
    "operatorShortName": "Stagecoach",
    "origin": "Partington",
    "serviceCode": "NW_04_SCMN_253_1",
    "startDate": "2023-08-15",
  },
]
`;
